add defi version
